# llm-studies

./: main.py  makefile  pyproject.toml
mcp/mcp-docs-helper/: agent.py  server.py
mcp/mcp-docs-helper/docs/: onboarding.md  runbook.md
mcp/mcp-pg-server/: server.py
memory/: main.py
python_bytesizes/: dataclass.py  decorator.py
react/: basic.py
tool_calling/: langgraph_like.py  native_tool_call_1.py  native_tool_call_2.py  tool_calling_basic.py
