[project]
name = "llm-studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "google-genai>=1.63.0",
    "mcp>=1.26.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sshtunnel>=0.4.0",
]
